[UPDATE] Overall grammar review

--- a/_posts/2017-12-30-welcome.md
+++ b/_posts/2017-12-30-welcome.md
@@ -9,15 +9,17 @@ categories:
 
 Hello there, I'm **vorixo** and I will be your main host in **Devtricks**!
 
-Devtricks was created under the necessity of completion. Two days before writing this post, I was researching about input responsivity in Unreal Engine 4, and I was ashamed, the information available about that topic at the date was almost non-existent. 
+Two days before making this post, I found myself researching input responsivity in Unreal Engine 4. I quickly came to the conclusion that it was a topic that was in dire need of a bit more love documentation-wise
 
-That made me ask myself - Why don't I write aswell? - well, so here we are! 
+This prompted me to ask myself - Why not take matters into my own hands, and complete the documentation myself.
+
+It was under this premise that Devtricks was born.
 
 ## What to expect
 
-**Devtricks** is a blog that will teach you certain tricks about game development in general, more focused in Unreal Engine 4 (but this is open to all the readers). 
+**Devtricks** is a blog that will teach you a variety of tricks about game development in general. Although it will focus on Unreal Engine 4, it is open for everyone to read.
 
-We will try to treat every single topic regarding game programming, from the most subtle things, to the most importants. We are very happy to have you as a reader, and please, enjoy.
+We will try to cover every single topic regarding game programming, from the most subtle of things, to the most important. We are very happy to have you as a reader, and please, enjoy.
 
 ## Thanks to
 
