[HOTFIX] Correcting web title for codingScars

--- a/_posts/2017-12-30-welcome.md
+++ b/_posts/2017-12-30-welcome.md
@@ -27,4 +27,4 @@ We will try to cover every single topic regarding game programming, from the mos
 
 [Minimal Mistakes](https://mmistakes.github.io/minimal-mistakes/){:target="_blank"}: The theme we will be using with this webpage, which is really easy to use and, it's responsive!
 
-[codigScars](http://coding-scars.com/){:target="_blank"}: Thanks to Carlos Fraguas (gracias Carlos! :D) in advance, not only because his blog is awesome to read (which I recommend), but for the fact that this webpage was created using the same framework he suggests on his site, and as you can see, works really well!
+[codingScars](http://coding-scars.com/){:target="_blank"}: Thanks to Carlos Fraguas (gracias Carlos! :D) in advance, not only because his blog is awesome to read (which I recommend), but for the fact that this webpage was created using the same framework he suggests on his site, and as you can see, works really well!
