[upd] refactoring some text

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -23,11 +23,11 @@ A lot of people get impressed when I tell them that my first contact with a game
 
 ## My Unreal Engine projects
 
+My first year using UE4 was mainly based on learning the engine capabilities and getting used to the framework. **Blueprints** were extremely useful for that, since they give you a notion of what **UE4** is able to pull of. 
+
 ### 3 Mini-Games in one
 
-My first year using the engine was mainly based on learning the engine capabilities and getting used to the framework. **Blueprints** were extremely useful for that, since they give you a notion of what **UE4** is able to pull of. Once I got used to the engine workflow I started applying that knowledge with **my first unreleased game**:
-
-This game is composed by several mini-games and counts with an extended interaction system (hold, one-time, drag) as the main shared features aswell as the gamemode, which is a time based score game. The first mini-game occours in a factory, where you control a worker that has to split golden cans and normal cans:
+Once I got used to the engine workflow I started applying that knowledge with **my first unreleased game**. This game is composed by several mini-games and counts with an extended interaction system (hold, one-time, drag) as the main shared features aswell as the gamemode, which is a time based score game. The first mini-game occours in a factory, where you control a worker that has to split golden cans and normal cans:
 
 ![InteractionGame]({{ '/' | absolute_url }}/assets/images/per-post/welcome/InteractionGame1.gif){: .align-center}
 
