[upd] more text and format refactor

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -35,7 +35,7 @@ The next mini-game takes place on a restaurant, where the player will need to ri
 
 ![InteractionGame]({{ '/' | absolute_url }}/assets/images/per-post/welcome/InteractionGame2.gif){: .align-center}
 
-The last mini-game is inspired on "[Papers Please](https://store.steampowered.com/app/239030/Papers_Please/){:target="_blank"}", where our protagonist will need to decline or allow the entrace of randomized citizens that will try to lie (or not) in their passport, there are aswell a couple of mechanics that will make the mini-game more interesting like the "criminal of the day", "allowed countries" or "minimum age allowed". 
+The last mini-game is inspired on [Papers Please](https://store.steampowered.com/app/239030/Papers_Please/){:target="_blank"}, where our protagonist will need to **decline or allow** the entrace of **randomized** citizens that will try to lie (or not) in their passport, there are aswell a couple of mechanics that will make the mini-game more interesting like "criminal of the day", "allowed countries" or "minimum age allowed". 
 
 ![InteractionGame]({{ '/' | absolute_url }}/assets/images/per-post/welcome/InteractionGame3.gif){: .align-center}
 
@@ -45,12 +45,12 @@ This project contains design patterns and concepts that can make the architectur
 
 Content of this project:
 
-	* Mutators: A practical approach of what a mutator is and how to apply it on a real scenario 
-	* Component based weapons: How to split functionalities in a cohesive way. Single-purpose components.
-	* Weapon Info Objects: How to populate and manage data un Unreal Engine.
-	* Weapon proxies: Dumb actors with minimal overhead that represent a weapon actor in the world.
-	* Object Factories: How to make an object that will spawn proxies.
-	* More...
+* **Mutators**: A practical approach of what a mutator is and how to apply it on a real scenario 
+* **Component based weapons**: How to split functionalities in a cohesive way. Single-purpose components.
+* **Weapon Info Objects**: How to populate and manage data un Unreal Engine.
+* **Weapon proxies**: Dumb actors with minimal overhead that represent a weapon actor in the world.
+* **Object Factories**: How to make an object that will spawn proxies.
+* More...
 
 ![InteractionGame]({{ '/' | absolute_url }}/assets/images/per-post/welcome/howto.PNG){: .align-center}
 
