[FIX] Fixing an image url

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -41,7 +41,7 @@ The last mini-game is inspired on [Papers Please](https://store.steampowered.com
 
 ### How to project
 
-This project contains design patterns and concepts that can make the architecture of your game much better, based mainly on [data oriented approaches](https://www.youtube.com/watch?v=rX0ItVEVjHc){:target="_blank"} (<- click!!, seriously a very good talk by [Mike Acton](https://twitter.com/mike_acton?lang=es){:target="_blank"}!). 
+This project contains design patterns and concepts that can make the architecture of your game much better, based mainly on [data oriented approaches](https://www.youtube.com/watch?v=rX0ItVEVjHc){:target="_blank"} (click!!, seriously a very good talk by [Mike Acton](https://twitter.com/mike_acton?lang=es){:target="_blank"}!). 
 
 Content of this project:
 
@@ -95,7 +95,7 @@ The [3D Perception Lab](https://labs.iuii.ua.es/3dperceptionlab/){:target="_blan
 
 My involvement in **3DPL** consisted of participating in this project: **UnrealROX: An eXtremely Photorealistic Virtual Reality Environment for Robotics Simulations and Synthetic Data Generation**. This paper can be found at [arXiv](https://arxiv.org/abs/1810.06936){:target="_blank"} and [here](https://www.researchgate.net/publication/328332732_UnrealROX_An_eXtremely_Photorealistic_Virtual_Reality_Environment_for_Robotics_Simulations_and_Synthetic_Data_Generation){:target="_blank"} for an online view.
 
-![UnrealROX]({{ '/' | absolute_url }}/assets/images/per-post/welcome/unrealrox.png){: .align-center}
+![UnrealROX]({{ '/' | absolute_url }}/assets/images/per-post/welcome/unrealrox.PNG){: .align-center}
 
 ### Galaxy in Turmoil at Frontwire Studios
 
