[FIX] Minor grammar fixes

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -113,7 +113,7 @@ My involvement in **3DPL** consisted of participating in this project: **UnrealR
 
 Currently (at the time I write this post), I am working as a lead programmer at [Frontwire Studios](http://frontwirestudios.com/){:target="_blank"}.
 
-As my [LinkedIn](https://www.linkedin.com/in/vorixo/){:target="_blank"} says I work there a gameplay programmer aswell as a network programmer, ensuring the balance between modularity and efficiency to create reusable systems all along the game.
+As my [LinkedIn](https://www.linkedin.com/in/vorixo/){:target="_blank"} says I work there as a gameplay programmer aswell as a network programmer, ensuring the balance between modularity and efficiency to create reusable systems all along the game.
 
 I can't tell any specific aspect of the game we are currently working on ([Galaxy in Turmoil](https://www.youtube.com/watch?v=Vl_iOjIvZ90){:target="_blank"}) aside that it is a cyberpunk game that rocks a lot. Oh and it has guns and vehicles!
 
@@ -121,7 +121,7 @@ I can't tell any specific aspect of the game we are currently working on ([Galax
 
 ## My non Unreal Engine projects
 
-We are going to dedicate this part of the blog to games that I made that do not use the Engine.
+We are going to dedicate this part of the blog to games that I made that do not use UE4.
 
 ### 77 Attempts
 
