[UPD] Adding a ref to my new webpage

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -7,7 +7,7 @@ categories:
   - General
 ---
 
-Hello there, I'm **vorixo** and I will be your main host in **Devtricks**!
+Hello there, I'm **[vorixo](https://vorixo.github.io/){:target="_blank"}** and I will be your main host in **Devtricks**!
 
 Two days before making this post, I found myself researching input responsivity in Unreal Engine 4. I quickly came to the conclusion that it was a topic that was in dire need of a bit more love documentation-wise
 
