[FIX] cmd based -> text based

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -17,7 +17,7 @@ It was under this premise that Devtricks was born.
 
 ## Who am I?
 
-My name is Álvaro Jover, I'm a computer scientist *(not yet, I'm on it! I'll try to not forget to update this when I'm done with it hehe)* and you can find me on social media under the name of [vorixo](https://twitter.com/vorixo){:target="_blank"}. I've been working on **Unreal Engine 4** since 2015. My first contact with game development was thanks to a little cmd based game I made inspired on the [Fallout series](https://en.wikipedia.org/wiki/Fallout_(series)){:target="_blank"}). My curiousity lead me to wonder how modern games were made, so I decided to take a look to the most powerful modern engines. 
+My name is Álvaro Jover, I'm a computer scientist *(not yet, I'm on it! I'll try to not forget to update this when I'm done with it hehe)* and you can find me on social media under the name of [vorixo](https://twitter.com/vorixo){:target="_blank"}. I've been working on **Unreal Engine 4** since 2015. My first contact with game development was thanks to a little text based game I made inspired on the [Fallout series](https://en.wikipedia.org/wiki/Fallout_(series)){:target="_blank"}). My curiousity lead me to wonder how modern games were made, so I decided to take a look to the most powerful modern engines. 
 
 A lot of people get impressed when I tell them that my first contact with a game engine was with Unreal Engine 4 due to how advanced the engine is for a rookie game developer, and don't get me wrong, I think the learning curve of Unreal Engine is quiet reasonable for what it offers. 
 
