[UPD] New entry to the devtricks blog

--- a/_posts/2021-09-18-gas.md
+++ b/_posts/2021-09-18-gas.md
@@ -59,8 +59,9 @@ GAS is one of those things... It isn't terribly complex. But there's a lot of ne
 
 ## The pros: Implementing an ability is easy, I swear
 
-To make things simpler and fairer, we are going to explore the *Light Dart* ability blueprint from the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) provided by Epic.
+To make things simpler and fairer, we are going to explore the _Light Dart_ ability blueprint from the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) provided by Epic.
 
+<iframe width="420" height="315" src="http://www.youtube.com/embed/wp33UIbQkfw" frameborder="0" allowfullscreen></iframe>
 
 This ability is feature complete as it adds **Tags**, **Cues**, mutates some **Attributes** and employs the controllability offered by the ability system.
 
@@ -71,10 +72,10 @@ Abilities expose a section in their Class Default Object (CDO) to define a serie
 ![Ability tags]({{ '/' | absolute_url }}/assets/images/per-post/gas/gas-1.PNG){: .align-center}
 
 In summary, this ability does the following:
-* Ability Tags: Grants the *Ability.PlayerActivated* tag to the ability owner.
-* Cancel Abilities with Tag: Cancels all the abilities with the *Ability.LocomotionControl* tag. 
-* Block Abilities with Tag: Prevents abilities with tag *Ability.TerrainInteraction* to be activated.
-* Activation Blocked Tags: The ability is blocked if the activating actor/component has the *Status.LocomotionControl* tag or the *Status.BlockingAction* tag.
+* Ability Tags: Grants the _Ability.PlayerActivated_ tag to the ability owner.
+* Cancel Abilities with Tag: Cancels all the abilities with the _Ability.LocomotionControl_ tag. 
+* Block Abilities with Tag: Prevents abilities with tag _Ability.TerrainInteraction_ to be activated.
+* Activation Blocked Tags: The ability is blocked if the activating actor/component has the _Status.LocomotionControl_ tag or the _Status.BlockingAction_ tag.
 
 As we can see, the tag system shifts the paradigm towards stateful systems, by providing a simple controllability interface in our abilities. In traditional systems this would be equivalent to an intrinsec and complicated **if-else** boolean statement chain.
 
@@ -89,12 +90,12 @@ Numbered nodes explanation:
   1. Wait until the Status.InCinematic tag is added. If added, we'll call OnThrowAborted to abort the ability.
   2. ActorInfo holds all the relevant information contained of our ability system component. Within this information we can find the avatar, which represents the Actor that actuates over the AbilityComponent.
   3. EndAbility should be called when we want to terminate the ability and remove all the tags we've added in the controllability phase.
-  4. This node isn't related to the ability system. It simply mutates the camera with certain specified configuration determined by the passed-in *Camera Mode* class.
-  5. Similar to the WaitGameplayTagAdd node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls *Enter Charging State*. If the event is received we'll perform a smooth rotation over Echo root.
+  4. This node isn't related to the ability system. It simply mutates the camera with certain specified configuration determined by the passed-in _Camera Mode_ class.
+  5. Similar to the WaitGameplayTagAdd node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls _Enter Charging State_. If the event is received we'll perform a smooth rotation over Echo root.
 
 ### 3. Charging State
 
-Following next, Echo starts levitating spawning some particles and sounds, to do that, this project decides to use the gameplay cue system. When this happens Echo should also reduce their movement speed and start casting the *Light Dart*.
+Following next, Echo starts levitating spawning some particles and sounds, to do that, this project decides to use the gameplay cue system. When this happens Echo should also reduce their movement speed and start casting the _Light Dart_.
 
 ![Charging state 1]({{ '/' | absolute_url }}/assets/images/per-post/gas/gas-3.PNG){: .align-center}
 
@@ -103,13 +104,13 @@ Following next, Echo starts levitating spawning some particles and sounds, to do
 Numbered nodes explanation:
 
   1. Adds a gameplay-cue to the owner, in this case it starts the orbe charging animation.
-  2. Abilities can also define their own internal state and react accordingly when their state is ended through its neighbour node *End Ability State*.
+  2. Abilities can also define their own internal state and react accordingly when their state is ended through its neighbour node _End Ability State_.
   3. Similar to 1, however this time we are adding a looping cue (looping animation or sound). In the case of this ability, it makes Echo levitate in place while we hold the button.
   4. As we commented before GameplayEffects can modify attributes, in this case it mutates the MoveSpeed value that sets its new value directly in the Character Movement Component (CMC).
-  5. Expects the ability activator to provide target data over a target actor special class. In this case it's waiting for the target actor to define the aim vector to throw the *Light Dart*.
+  5. Expects the ability activator to provide target data over a target actor special class. In this case it's waiting for the target actor to define the aim vector to throw the _Light Dart_.
   6. Removes a looping cue giving a tag handle. In this case, if we obtain valid data from the target actor, Echo stops levitating.
   7. Waits for the input to be released.
-  8. If the input has been released successfully we the target from the Wait Target Data node gets confirmed, making the *Wait Target Data* node execute the Valid Data output.
+  8. If the input has been released successfully we the target from the Wait Target Data node gets confirmed, making the _Wait Target Data_ node execute the Valid Data output.
 
 ### 3. Throwing the projectile
 
