[UPD] New entry to the devtricks blog

--- a/_posts/2021-09-18-gas.md
+++ b/_posts/2021-09-18-gas.md
@@ -49,7 +49,12 @@ What's the Gameplay Ability System? The answer is simple, an ability framework w
 And here is where we see the first issue:
 
 ```
-GAS is one of those things... It isn't terribly complex. But there's a lot of new concepts. And until you really understand all the concepts, the design doesn't quite fall together. So it feels like a lot of conceptual effort to still be stumbling in the dark.
+GAS is one of those things... It isn't terribly complex. 
+But there's a lot of new concepts. 
+
+And until you really understand all the concepts, the design 
+doesn't quite fall together. So it feels like a lot of conceptual 
+effort to still be stumbling in the dark.
 
 - ImmutableLambda
 ```
