--- a/_posts/2021-09-18-gas.md
+++ b/_posts/2021-09-18-gas.md
@@ -66,7 +66,7 @@ effort to still be stumbling in the dark.
 
 To make things simpler and fairer, we are going to explore the _Light Dart_ ability blueprint from the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) provided by Epic.
 
-<iframe width="420" height="315" src="http://www.youtube.com/embed/wp33UIbQkfw" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="http://www.youtube.com/embed/wp33UIbQkfw" frameborder="0"></iframe>
 
 This ability is feature complete as it adds **Tags**, **Cues**, mutates some **Attributes** and employs the controllability offered by the ability system.
 
@@ -188,7 +188,7 @@ Let's now list some resources that helped me getting introduced to the Gameplay 
 * Dan's [GASShooter](https://github.com/tranek/GASShooter)
 * Dan's [GASDocumentation](https://github.com/tranek/GASDocumentation)
 * KaosSpectrum's [The Games Dev](https://www.thegames.dev/)
-* Slacker's 
+* [Slacker's **gameplay-ability-system** channel](https://discord.gg/unreal-slackers).
 
 As always, the best recommendation is to check the engine's source code.
 
