[UPD] New entry to the devtricks blog

--- a/_posts/2021-09-18-gas.md
+++ b/_posts/2021-09-18-gas.md
@@ -66,7 +66,7 @@ effort to still be stumbling in the dark.
 
 To make things simpler and fairer, we are going to explore the _Light Dart_ ability blueprint from the [Valley of the Ancient Sample](https://docs.unrealengine.com/5.0/en-US/ContentAndSamples/ValleyOfTheAncient/) provided by Epic.
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/wp33UIbQkfw" frameborder="0"></iframe>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/wp33UIbQkfw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 This ability is feature complete as it adds **Tags**, **Cues**, mutates some **Attributes** and employs the controllability offered by the ability system.
 
