--- a/_posts/2021-09-18-gas.md
+++ b/_posts/2021-09-18-gas.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "Unreal Engine 5 - The truth of the Gameplay Ability System"
-excerpt: How to make these two work in tandem.
+excerpt: Demistifying the Gameplay Ability System
 author: Meta
 category: Videogames Development
 tags:
