[UPD] New entry to the devtricks blog

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -28,7 +28,7 @@ Most of these tools entail a shift in the way the industry approaches traditiona
 
 The industry will of course adapt these changes. So instead disregarding them because - "I'm so used to the old workflows and I don't care" - we should always be down to explore new technology and study the new challenges as they come to keep ourselves up to date and, of course, relevant to the industry.
 
-# The Gameplay Ability System
+# The Gameplay Ability System (GAS)
 
 Another of these _overwhelming_ new tools that has been around for a while is the [Gameplay Ability System](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/GameplayAbilitySystem/). I've seen lots of skepticism surrounding this tool, such as:
 * It's just too much!
@@ -96,7 +96,7 @@ Numbered nodes explanation:
   2. ActorInfo holds all the relevant information contained of our ability system component. Within this information we can find the avatar, which represents the Actor that actuates over the AbilityComponent.
   3. EndAbility should be called when we want to terminate the ability and remove all the tags we've added in the controllability phase.
   4. This node isn't related to the ability system. It simply mutates the camera with certain specified configuration determined by the passed-in _Camera Mode_ class.
-  5. Similar to the WaitGameplayTagAdd node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls _Enter Charging State_. If the event is received we'll perform a smooth rotation over Echo root.
+  5. Similar to the WaitGameplayTagAdd node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls _Enter Charging State_. If the event is received we'll perform a smooth rotation over Echo's root.
 
 ### 3. Charging State
 
