[UPD] New entry to the devtricks blog

--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -162,7 +162,7 @@ One example I found recently was binding an ability to an input action using the
 
 ### No multiplayer official examples
 
-One of the main intents of GAS is using it in multiplayer games, and yet Epic hasn't provided yet an official feature-complete sample that we can look at and learn good practices about GAS. The community is simply blind guessing what's the best solution for multiplayer games based on engine source code. Why not providing a mini-Fortnite example? Or... why not ShooterGame? It'd be great having a GAS version of it using all the techniques already explored in Fortnite.
+One of the main intents of GAS is using it in multiplayer games, and yet Epic hasn't provided an official multiplayer feature-complete example that we can look at and learn good practices about GAS. The community is simply blind guessing what's the best solution for multiplayer games based on engine source code. Why not providing a mini-Fortnite example? Or... why not a GAS based ShooterGame? It'd be great having an official example using all the techniques already explored in Fortnite.
 
 ## But once it's setup...
 
