[FIX] Typo and re-writing pass

--- a/_posts/2017-12-29-welcome.md
+++ b/_posts/2017-12-29-welcome.md
@@ -95,7 +95,7 @@ I collaborate parcially at [Piperift](https://piperift.com/){:target="_blank"}, 
 
 ![Piperift]({{ '/' | absolute_url }}/assets/images/per-post/welcome/pipelogo.jpg){: .align-center}
 
-Out of jokes, [Muit](https://muit.github.io/){:target="_blank"} made an excelent job creating this brand, **the quality standars at Piperift are high**, every single plugin is created with a lot of dedication and effort by the creators. I am so happy to say that I am part of this family. You can check out all the work we put out at our web, and in our [marketplace page](https://www.unrealengine.com/marketplace/profile/Piperift){:target="_blank"}. 
+Out of jokes, [Muit](https://muit.github.io/){:target="_blank"} made an excelent job creating this brand, **the quality standards at Piperift are high**, every single plugin is created with a lot of dedication and effort by the creators. I am so happy to say that I am part of this family. You can check out all the work we put out at our web, and in our [marketplace page](https://www.unrealengine.com/marketplace/profile/Piperift){:target="_blank"}. 
 
 ---
 
