--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -82,7 +82,7 @@ In summary, this ability does the following:
 * Block Abilities with Tag: Prevents abilities with tag _Ability.TerrainInteraction_ to be activated.
 * Activation Blocked Tags: The ability is blocked if the activating actor/component has the _Status.LocomotionControl_ tag or the _Status.BlockingAction_ tag.
 
-As we can see, the tag system shifts the paradigm towards stateful systems, by providing a simple controllability interface in our abilities. In traditional systems this would be equivalent to an intrinsec and complicated **if-else** boolean statement chain.
+As we can see, the tag system shifts the paradigm towards stateful systems, by providing a simple controllability interface in our abilities. In traditional systems this would be equivalent to a long and complicated **if-else** boolean statement chain.
 
 ### 2. On ability activated
 
@@ -93,14 +93,14 @@ Once the ability goes through its initial phase, the event **ActivateAbility** g
 Numbered nodes explanation:
 
   1. Wait until the Status.InCinematic tag is added. If added, we'll call OnThrowAborted to abort the ability.
-  2. ActorInfo holds all the relevant information contained of our ability system component. Within this information we can find the avatar, which represents the Actor that actuates over the AbilityComponent.
+  2. ActorInfo holds all the information relevant to our Ability System Component. Within this information we can find the avatar, which represents the Actor that actuates over the AbilityComponent.
   3. EndAbility should be called when we want to terminate the ability and remove all the tags we've added in the controllability phase.
   4. This node isn't related to the ability system. It simply mutates the camera with certain specified configuration determined by the passed-in _Camera Mode_ class.
   5. Similar to the WaitGameplayTagAdd node, it waits until the specified gameplay tag event is triggered. Right after the execution of this node the blueprint calls _Enter Charging State_. If the event is received we'll perform a smooth rotation over Echo's root.
 
 ### 3. Charging State
 
-Following next, Echo starts levitating spawning some particles and sounds, to do that, this project decides to use the gameplay cue system. When this happens Echo should also reduce their movement speed and start casting the _Light Dart_.
+Following this, the character will begin to levitate, spawning particles and triggering sounds, for that, this project uses the gameplay cue system. When this happens, Echo reduces their movement speed and starts casting the _Light Dart_.
 
 ![Charging state 1]({{ '/' | absolute_url }}/assets/images/per-post/gas/gas-3.PNG){: .align-center}
 
@@ -162,7 +162,7 @@ One example I found recently was binding an ability to an input action using the
 
 ### No multiplayer official examples
 
-One of the main intents of GAS is using it in multiplayer games, and yet Epic hasn't provided an official multiplayer feature-complete example that we can look at and learn good practices about GAS. The community is simply blind guessing what's the best solution for multiplayer games based on engine source code. Why not providing a mini-Fortnite example? Or... why not a GAS based ShooterGame? It'd be great having an official example using all the techniques already explored in Fortnite.
+One of the main intents of GAS is using it in multiplayer games, and yet Epic hasn't provided an official multiplayer feature-complete example that we can look at and learn good practices about GAS. The community is simply blind guessing what's the best solution for multiplayer games based on engine source code. Why not provide a mini-Fortnite example? Or... why not a GAS based [ShooterGame](https://docs.unrealengine.com/4.27/en-US/Resources/SampleGames/ShooterGame/)? It'd be great having an official example using all the techniques already explored in Fortnite.
 
 ## But once it's setup...
 
@@ -172,8 +172,7 @@ As everything, when it comes to code design it is just a matter of learning the 
 * Creating new tasks
 * Damage Calculations
 * Non-ability code that interacts with the system
-* ...
-
+* And so on...
 # Relevant resources
 
 Let's now list some resources that helped me getting introduced to the Gameplay Ability System.
