--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -12,7 +12,7 @@ tags:
   - UE4
 ---
 
-Hello, it's been a long time since I haven written a gamedev article, been busy with life. 
+Hello, it's been a long time since I have written a gamedev article, been busy with life. 
 
 If we talk about trending engines, we have to talk about [Unreal Engine 5](https://www.unrealengine.com/en-US/unreal-engine-5).
 
