--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -18,7 +18,7 @@ If we talk about trending engines, we have to talk about [Unreal Engine 5](https
 
 This brand new version of Unreal includes a number of features that _enhance_ the experience of working with the engine. Such as [Nanite](https://docs.unrealengine.com/5.0/en-US/RenderingFeatures/Nanite/), which with an avant-garde application of **virtualized geometry** technology, can allow for taking significant shortcuts when creating game-ready photorealistic assets.
 
-However, these new goodies shall present developers with new challenges. For example, in Nanite we get the presented with the following difficultes:
+However, these new goodies shall present developers with new challenges. For example, in Nanite we get presented with the following difficultes:
   * Where to use it: Static opaque non-deformable geometry. Better explained in this [list](https://docs.unrealengine.com/5.0/en-US/RenderingFeatures/Nanite/#supportedfeaturesofnanite).
   * Size: Compressed Nanite meshes often take more disk space than normal low-poly meshes. 
   * [Overdraw](https://youtu.be/xUUSsXswyZM?t=791): Dense overlapping geometry can cause performance issues.
