--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -33,7 +33,7 @@ The industry will of course adapt these changes. So instead disregarding them be
 Another of these _overwhelming_ new tools that has been around for a while is the [Gameplay Ability System](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/GameplayAbilitySystem/). I've seen lots of skepticism surrounding this tool, such as:
 * It's just too much!
 * Stay away from it as much as you can!
-* The learning curve is very stiff
+* The learning curve is very stiff!
 * It really doesn't solve any problem...
 
 Unfortunately, the story gets repeated, most of the diregardement and criticism comes from people that haven't worked in depth with the system. In this post, we'll demistify and comment real pros and cons of the system. 
@@ -149,7 +149,7 @@ Also, multiplayer games require to do pretty specific setups to simply initialis
 * Plan to add the ability system component in the player state?
   * Be prepared to write hundreds of code in your avatar Actor to use it as a replication proxy if you don't want to boost the net update frequency of the PlayerState.
   * Understanding the difference between the Owner (actor which has the component) and the Avatar (actor which uses the component) of the Ability System Component is key.
-  * Network roles: Being autonomous proxy in the character doesn't mean being autonomous proxy in the PlayerState. This can cause some confusion as some functions in the Ability System framework use the Owner's role instead of the avatar role (ie. Gameplay Effect application).
+  * Network roles: Being autonomous proxy in the character doesn't mean being autonomous proxy in the PlayerState. This can cause some confusion as some functions in the Ability System framework use the Owner's role instead of the Avatar's role (ie. Gameplay Effect application).
 * Plan to add the ability system component in the pawn?
   * No biggie. This one is easy, you won't have to worry much about networking stuff.
   * Non-persistent ASC unless you pool your pawns.
@@ -158,7 +158,7 @@ Also, multiplayer games require to do pretty specific setups to simply initialis
 
 There is not an standardized way of adding attributes and abilities to your Actors. I've read around ways of doing it... but I feel we are missing a handbook of good practices coming from Epic themselves. Adding and initialising attributes and abilities can get pretty complicated in multiplayer games due to replication and possible data races.
 
-One example I found recently was binding an ability to an input action using the Enhanced Input plugin. But really, most of the time you feel like you are work-arounding issues setting up the system to work.
+One example I found recently was binding an ability to an input action using the [Enhanced Input](https://docs.unrealengine.com/4.26/en-US/InteractiveExperiences/Input/EnhancedInput/) plugin. But really, most of the time you feel like you are work-arounding issues setting up the system to work.
 
 ### No multiplayer official examples
 
@@ -168,7 +168,8 @@ One of the main intents of GAS is using it in multiplayer games, and yet Epic ha
 
 Once you got around the setup the system is pretty easy to use and intuitive. Your game designers will love it! And extending it is pretty easy.
 
-As everything, when it comes to code design it is just a matter of learning the tools provided by the system and using the appropriately to solve the different problems you'll face:
+Like everything else, when it comes to code design, it is just a matter of learning the tools provided by the system and using them properly to solve the different problems you will face:
+
 * Creating new tasks
 * Damage Calculations
 * Non-ability code that interacts with the system
