--- a/_posts/2021-10-09-gas.md
+++ b/_posts/2021-10-09-gas.md
@@ -77,10 +77,10 @@ Abilities expose a section in their Class Default Object (CDO) to define a serie
 ![Ability tags]({{ '/' | absolute_url }}/assets/images/per-post/gas/gas-1.PNG){: .align-center}
 
 In summary, this ability does the following:
-* Ability Tags: Grants the _Ability.PlayerActivated_ tag to the ability owner.
-* Cancel Abilities with Tag: Cancels all the abilities with the _Ability.LocomotionControl_ tag. 
-* Block Abilities with Tag: Prevents abilities with tag _Ability.TerrainInteraction_ to be activated.
-* Activation Blocked Tags: The ability is blocked if the activating actor/component has the _Status.LocomotionControl_ tag or the _Status.BlockingAction_ tag.
+* **Ability Tags**: Grants the _Ability.PlayerActivated_ tag to the ability owner.
+* **Cancel Abilities with Tag**: Cancels all the abilities with the _Ability.LocomotionControl_ tag.
+* **Block Abilities with Tag**: Prevents abilities with tag _Ability.TerrainInteraction_ to be activated.
+* **Activation Blocked Tags**: The ability is blocked if the activating actor/component has the _Status.LocomotionControl_ tag or the _Status.BlockingAction_ tag.
 
 As we can see, the tag system shifts the paradigm towards stateful systems, by providing a simple controllability interface in our abilities. In traditional systems this would be equivalent to a long and complicated **if-else** boolean statement chain.
 
